优化计算逻辑